tests/ok/meta-function-ast-expression-kind-branch.ari
fn base() -> i64 {
  return 10;
}

meta fn score_expr(input: ast) -> ast {
  return if ast_is(input, "integer") && input.kind() == "integer" {
    input + 1
  } else if ast_kind(input) == "call" {
    input + 2
  } else if input.is("name") {
    3
  } else {
    99
  };
}

fn main() -> i64 {
  let value = 9;
  return score_expr!(40) + score_expr!(base()) + score_expr!(value);
}
