tests/errors/operators-float-int-suffix.ari
fn main() -> i64 {
  let value = 1.0i32;
  return 0;
}
